Bump Java version to 22